stacks/postgres-stack/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-platform-ingress
  namespace: postgres-platform
  labels:
    app.kubernetes.io/part-of: postgres-platform
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    # pgAdmin – accessible at http://pgadmin.127.0.0.1.sslip.io:8080
    - host: pgadmin.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 5050
